--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Greenorb : A HTML5 game " />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Greenorb</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/goldenratio/greenorb">View on GitHub</a>
-
-          <h1 id="project_title">Greenorb</h1>
-          <h2 id="project_tagline">A HTML5 game </h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/goldenratio/greenorb/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/goldenratio/greenorb/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="greenorb" class="anchor" href="#greenorb"><span class="octicon octicon-link"></span></a>greenorb</h1>
-
-<p>A HTML5 game </p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Greenorb maintained by <a href="https://github.com/goldenratio">goldenratio</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
+<html> <head> <title> Green Orb </title> <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, target-densitydpi=device-dpi"> <meta name="apple-mobile-web-app-capable" content="yes"> <link rel="shortcut icon" type="image/png" href="icon64.png"/> <link rel="apple-touch-icon" href="icon64.png"/> <link rel="stylesheet" type="text/css" href="style.css"> <script src="main.js" type="text/javascript"></script> </head> <body> <div id="main"> <div id="gameContainer"> <canvas id="slate" width="320" height="460"></canvas> </div> </div> </body> </html>
